--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starter-micro-api",
+  "name": "nettisivu ",
   "version": "1.0.0",
   "description": "Cyclic.sh micro api starter",
   "main": "index.js",
